Fixed the alignment (issue #6) with a wrapper div.

--- a/americasMap.css
+++ b/americasMap.css
@@ -4,6 +4,11 @@ Html, body, div, h1 {
     Margin: 0;
 }
 
+#wrapper {
+    width: 640px;
+    margin: auto;
+}
+
 #Country_Names {
     font-weight: lighter;
 }
@@ -47,9 +52,7 @@ Html, body, div, h1 {
 }
 
 .southAmericaMap, .centralAmericaMap {
-    margin: auto;
     margin-top: 2px;
-    width: 640px;
 }
 
 .centralAmericaMap {
@@ -57,7 +60,6 @@ Html, body, div, h1 {
 }
 
 #centralAmericaSvg {
-    margin-left: 27%;
     margin-top: -7%;
 }
 
